# board-game

./: package-lock.json  settings.py
api/: Cargo.toml
api/src/: api.rs  main.rs  models.rs  mongo.rs
back/: Cargo.toml
back/src/: main.rs
back/src/api/: mod.rs  mongo_api.rs
back/src/structures/: mod.rs  mongo_struct.rs  rocket_struct.rs
django_back/catan/: models.py
django_back/core/: asgi.py  settings.py  urls.py  wsgi.py
django_back/django_back/: asgi.py  settings.py  urls.py
django_back/tic_tac_toe/: classes.py  consumers.py  interfaces.py  models.py  notifier.py  routing.py  routings.py  serializers.py  tmp.py  urls.py  views.py
django_back/tic_tac_toe/migrations/: 0001_initial.py  0002_alter_game_current_player_alter_game_player_1_and_more.py  0003_rename_current_player_game_current_turn.py  0004_rename_gamecell_square.py  0005_remove_game_player_1_remove_game_player_2_and_more.py  0006_alter_game_creator_alter_game_current_turn.py  0007_game_draw_alter_game_board_size.py  0008_game_is_finished.py
django_back/user_handler/: exceptions.py  models.py  serializers.py  urls.py  views.py
django_back/user_handler/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0002_auto_20230214_1657.py  0003_remove_user_createdat.py  0003_rename_is_logged_in_user_isloggedin.py  0005_user_is_logged.py  (+2 more)
front/: main.js  package-lock.json  package.json
front/src/: App.js
rust (in dev)/: Cargo.toml
rust (in dev)/src/: main.rs
ts_front/: package-lock.json  package.json
ts_front/src/: App.css  App.tsx  index.css  index.tsx
(+36 files in other folders)
