[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mongodb = { version = "2.2.0", default-features = false, features = ["async-std-runtime"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = "1.0.139"